bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/something_not_directives.error_regex
The fields \['something_not_directives'\] were unknown to the schema
